[metadata]
name = cockpit
version = 0

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = cockpit*

[options.entry_points]
console_scripts =
  cockpit-bridge = cockpit.bridge:main
  cockpit-askpass = cockpit._vendor.ferny.interaction_client:main

[options.package_data]
cockpit.data =
    *.html
